# web2hs

./: .gitignore  CONTENTS  README.md  TODO.txt  iso7185.txt  web2hs.cabal
Language/Pascal/: GenerateC.hs  Lexer.x  Parser.y  Pretty.hs  Syntax.hs  Transform.hs  Typecheck.hs
Language/Pascal/Interpreter/: Base.hs  Builtins.hs
cbits/: builtins.c  builtins.h
tests/: Notes.txt  Pooltype.hs  Primes.hs  Tangle.hs  Test.hs  TestParser.hs  Weave.hs  bibtex.p  dvitype.p  dvitype.sh  pooltype.p  pooltype.sh  primes.sh  prog1.p  tangle.p  tangle.sh  test1.pool  tex.p  weave.p  weave.sh
tests/inputs/: tex.pool
tests/pascal/: bibtex.p  dvitype.p  etex.p  pooltype.p  primes.p  tangle.p  tex.p  weave.p
tests/trip/: Makefile  README.md  trip.ch
tests/web/: tangle.ch
web2hs/: Web2hs.hs  web2hs.cabal
web2hs-lib/: LICENSE  web2hs-lib.cabal
web2hs-lib/System/Web2hs/: FileCache.hs  History.hs
web2hs-lib/cbits/: web2hs_pascal_builtins.c  web2hs_pascal_builtins.h
web2hs-tangle-boot/: Setup.hs  tangle.p  web2hs-tangle-boot.cabal
web2hs-tex/: Setup.hs  TeX.hs  tex.ch  web2hs-tex.cabal
web2hs-tex/System/Web2hs/: TeX.chs  TeX.hs
web2hs-texware/: DVIType.chs  DVIType.hs  Pooltype.hs  Setup.hs  dvitype.ch  pooltype.tex  web2hs-texware.cabal
web2hs-web/: Setup.hs  Tangle.hs  tangle.ch  web2hs-web.cabal
web2hs-web-bin/: Setup.hs  Tangle.hs  Weave.hs  web2hs-web-bin.cabal
web2hs/Distribution/: Web2hs.hs
web2hs/Language/Pascal/: GenerateC.hs  Lexer.x  Parser.y  Pretty.hs  Syntax.hs  Transform.hs  Typecheck.hs
web2hs/Language/Pascal/Interpreter/: Base.hs  Builtins.hs
web2hs/Language/Pascal/Pretty/: Base.hs  C.hs  Pascal.hs
