name:                web2hs-lib
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          judah.jacobson@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  -- build-depends:       base ==4.5.*
  include-dirs:     cbits
  c-sources:        cbits/web2hs_pascal_builtins.c
  install-includes: web2hs_pascal_builtins.h
