name:                web2hs-tangle-boot
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          judah.jacobson@gmail.com
-- copyright:           
-- category:            
build-type:          Custom
cabal-version:       >=1.8
extra-source-files: tangle.p

executable web2hs-tangle-boot
  main-is:          Tangle.hs
  build-depends:    base ==4.5.*, web2hs-lib==0.1.*
  extensions:       ForeignFunctionInterface
