name:                web2hs-tex
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
maintainer:          Judah Jacobson <judah.jacobson@gmail.com>
-- copyright:           
-- category:            
build-type:          Custom
cabal-version:       >=1.8

x-web2hs-source: tex.web

executable web2hs-tex
  main-is:             TeX.hs
  build-depends:       base ==4.5.*, web2hs-lib ==0.1.*
  c-sources:           tex.c
  extensions:          ForeignFunctionInterface
