name:                web2hs-tex
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
maintainer:          Judah Jacobson <judah.jacobson@gmail.com>
-- copyright:           
-- category:            
build-type:          Custom
cabal-version:       >=1.8

extra-source-files: tex.web tex.ch


library
  exposed-modules:     System.Web2hs.TeX
  other-modules:       Paths_web2hs_tex
  build-depends:       base ==4.5.*, web2hs-lib ==0.1.*
  x-web2hs-source:     tex.web
  extensions:          ForeignFunctionInterface, RecordWildCards

executable web2hs-tex
  main-is:             TeX.hs
  other-modules:       Paths_web2hs_tex
                       System.Web2hs.TeX
  build-depends:       base ==4.5.*, web2hs-lib ==0.1.*, cmdargs==0.9.*
  x-web2hs-source:     tex.web
  extensions:          ForeignFunctionInterface, RecordWildCards
                       DeriveDataTypeable
