name:                web2hs-texware
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
maintainer:          Judah Jacobson <judah.jacobson@gmail.com>
-- copyright:           
-- category:            
build-type:          Custom
cabal-version:       >=1.8

x-web2hs-source: dvitype.web
x-web2hs-source: pooltype.web

executable web2hs-dvitype
  main-is:             DVIType.hs
  build-depends:       base ==4.5.*, web2hs-lib ==0.1.*, cmdargs==0.9.*
  c-sources:           dvitype.c
  includes:            dvitype.h
  include-dirs:        .
  extensions:          ForeignFunctionInterface, RecordWildCards, DeriveDataTypeable
                        PatternGuards

executable web2hs-pooltype
  main-is:             Pooltype.hs
  build-depends:       base ==4.5.*, web2hs-lib ==0.1.*
  c-sources:           pooltype.c
  extensions:          ForeignFunctionInterface
