Name:                web2hs
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Judah Jacobson
Maintainer:          judah.jacobson@gmail.com
-- Copyright:           
Category:            Development
Build-type:          Simple
-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  -- Modules exported by the library.
  Exposed-modules:  
        Language.Pascal.Syntax
        Language.Pascal.Lexer
        Language.Pascal.Parser
        Language.Pascal.Transform
        Language.Pascal.Pretty.Base
        Language.Pascal.Pretty.Pascal
        Language.Pascal.Pretty.C
        Language.Pascal.Typecheck
        Distribution.Web2hs
  
  -- Packages needed in order to build this package.
  Build-depends: base==4.*, array>=0.3 && < 0.5, pretty>=1.0 && < 1.2,
                 containers==0.4.*, transformers>=0.2 && < 0.4,
                 Cabal==1.14.*, process==1.1.*, filepath==1.3.*,
                 directory==1.1.*
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools: alex>=3.0.2

  Extensions: RecordWildCards, TypeSynonymInstances, FlexibleInstances
              GADTs, GeneralizedNewtypeDeriving, TypeFamilies
              MultiParamTypeClasses, FlexibleContexts, UndecidableInstances
              StandaloneDeriving, PatternGuards, EmptyDataDecls
              DeriveDataTypeable

Executable web2hs
    Main-is: Web2hs.hs
    Other-modules: 
        Language.Pascal.Syntax
        Language.Pascal.Lexer
        Language.Pascal.Parser
        Language.Pascal.Transform
        Language.Pascal.Pretty.Base
        Language.Pascal.Pretty.Pascal
        Language.Pascal.Pretty.C
        Language.Pascal.Typecheck

    Build-tools: alex>=3.0.2
    Build-depends: base==4.*, array>=0.3 && < 0.5, pretty>=1.0 && < 1.2,
                 containers==0.4.*, transformers>=0.2 && < 0.4,
                 filepath>=1.0 && < 1.4, cmdargs==0.9.*
    Extensions: RecordWildCards, TypeSynonymInstances, FlexibleInstances
              GADTs, GeneralizedNewtypeDeriving, TypeFamilies
              MultiParamTypeClasses, FlexibleContexts, UndecidableInstances
              StandaloneDeriving, PatternGuards, EmptyDataDecls
              DeriveDataTypeable

